--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,16 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "animate.css": "^4.1.1",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-autoplay": "^8.0.0-rc22",
+    "embla-carousel-react": "^8.0.0-rc22",
+    "lodash-unified": "^1.0.3",
     "lucide-react": "^0.321.0",
     "react": "^18.2.0",
     "react-debounce-input": "^3.3.0",
